code/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T200000+0000/task_id=Insert/attempt=1.log
[2024-01-05T20:01:01.643+0000] {logging_mixin.py:188} INFO - Changing /opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T20:00:00+00:00/task_id=Insert permission to 509
[2024-01-05T20:01:01.643+0000] {logging_mixin.py:188} INFO - Failed to change /opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T20:00:00+00:00/task_id=Insert permission to 509: [Errno 1] Operation not permitted: '/opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T20:00:00+00:00/task_id=Insert'
[2024-01-05T20:01:01.676+0000] {logging_mixin.py:188} INFO - Changing /opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T20:00:00+00:00/task_id=Insert permission to 509
[2024-01-05T20:01:01.676+0000] {logging_mixin.py:188} INFO - Failed to change /opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T20:00:00+00:00/task_id=Insert permission to 509: [Errno 1] Operation not permitted: '/opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T20:00:00+00:00/task_id=Insert'
[2024-01-05T20:01:01.719+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: User_counter.Insert scheduled__2024-01-05T20:00:00+00:00 [queued]>
[2024-01-05T20:01:01.729+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: User_counter.Insert scheduled__2024-01-05T20:00:00+00:00 [queued]>
[2024-01-05T20:01:01.730+0000] {taskinstance.py:2171} INFO - Starting attempt 1 of 2
[2024-01-05T20:01:01.749+0000] {taskinstance.py:2192} INFO - Executing <Task(PostgresOperator): Insert> on 2024-01-05 20:00:00+00:00
[2024-01-05T20:01:01.753+0000] {standard_task_runner.py:60} INFO - Started process 272 to run task
[2024-01-05T20:01:01.757+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'User_counter', 'Insert', 'scheduled__2024-01-05T20:00:00+00:00', '--job-id', '4', '--raw', '--subdir', 'DAGS_FOLDER/User_counter.py', '--cfg-path', '/tmp/tmpec8fn5fl']
[2024-01-05T20:01:01.761+0000] {standard_task_runner.py:88} INFO - Job 4: Subtask Insert
[2024-01-05T20:01:01.821+0000] {logging_mixin.py:188} INFO - Changing /opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T20:00:00+00:00/task_id=Insert permission to 509
[2024-01-05T20:01:01.821+0000] {logging_mixin.py:188} INFO - Failed to change /opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T20:00:00+00:00/task_id=Insert permission to 509: [Errno 1] Operation not permitted: '/opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T20:00:00+00:00/task_id=Insert'
[2024-01-05T20:01:01.823+0000] {task_command.py:423} INFO - Running <TaskInstance: User_counter.Insert scheduled__2024-01-05T20:00:00+00:00 [running]> on host 732ac0f11a3e
[2024-01-05T20:01:01.919+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Airflow' AIRFLOW_CTX_DAG_ID='User_counter' AIRFLOW_CTX_TASK_ID='Insert' AIRFLOW_CTX_EXECUTION_DATE='2024-01-05T20:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-01-05T20:00:00+00:00'
[2024-01-05T20:01:01.920+0000] {sql.py:276} INFO - Executing: INSERT INTO users_count (count, date) 
        VALUES ((select count(id) from users) , '%(date)s' );
[2024-01-05T20:01:01.930+0000] {base.py:83} INFO - Using connection ID 'postgres_default' for task execution.
[2024-01-05T20:01:01.940+0000] {base.py:83} INFO - Using connection ID 'postgres_default' for task execution.
[2024-01-05T20:01:01.944+0000] {sql.py:432} INFO - Running statement: INSERT INTO users_count (count, date) 
        VALUES ((select count(id) from users) , '%(date)s' );, parameters: {'date': '2024-01-05 20:01:01'}
[2024-01-05T20:01:01.949+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in _run_command
    cur.execute(sql_statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near "2024"
LINE 2:         VALUES ((select count(id) from users) , ''2024-01-05...
                                                          ^

[2024-01-05T20:01:01.959+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=User_counter, task_id=Insert, execution_date=20240105T200000, start_date=20240105T200101, end_date=20240105T200101
[2024-01-05T20:01:01.977+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 4 for task Insert (syntax error at or near "2024"
LINE 2:         VALUES ((select count(id) from users) , ''2024-01-05...
                                                          ^
; 272)
[2024-01-05T20:01:02.010+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-01-05T20:01:02.035+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
